- xtec-booking: Added button to calendar view to select and deselect a batch of resources (Trello #1537)
- bp-like: Fixed removal of activity when you like and then unlike your own activity post
- xtec-booking: Increased maximum number of events displayed in calendar view (Trello #1583)
- table-of-contents-plus: Added plugin (Trello #1370)


Changes 17.04.24
---------------------------------------------------------------------------------------
- Polylang: Added plugin (Trello #1198)
- bp-moderation: Removed links in BuddyPress index page


Changes 17.03.28
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.7 (Trello #1543)
- xtec lib: Remove the visits of the robots older than two months (Trello #1296)
- import-users-from-csv-with-meta: Upgraded plugin from version 1.8.7.2 to 1.10.2 (Trello #1260)
- Added WordPress translation to Basque, Galician, French and Occitan (Trello #1534)
- xtec-booking: Added support for translations to javascript calendar (Trello #1534)
- Themes: In themes list (wp-admin/themes.php), show only the theme already in use in that site (Trello #1538)
- GCE: Fixed hover effect and customized calendar list view (Trello #1547)
- GCE: Fixed access to protected with password and private calendars (Trello #1548)
- GCE: Added loading of JQuery library, required by some themes in XTECBlocs (Trello #1034)


Changes 17.02.13
---------------------------------------------------------------------------------------
- xtec-booking: Fixed color of the right border on mouse over with some colors (Trello #1495)
- mu-common: Fixed access to Comments and Tools for Contributors (Trello #1354)
- mu-common: Expired in session instead of default 10 days the cookie for posts protected with password (Trello #1461)
- Theme reactor: Fixed PHP warning with header icons (Trello #1472 i #1470)
- Theme reactor: Improved catalan translation (Trello #1504)